<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ledger</string>
    <string name="action_settings">Settings</string>
    <string name="action_synchronize">Synchronize</string>
    <string name="transaction_reported">Transaction reported</string>
    <string name="menu_delete">Delete</string>
    <string name="select_transactions">Select Transactions</string>
    <string name="amount_is_required">Please specify amount.</string>
    <plurals name="number_of_deleted_transactions">
        <item quantity="one">Deleted %d transaction.</item>
        <item quantity="other">Deleted %d transactions.</item>
    </plurals>
    <plurals name="number_of_selected_transactions">
        <item quantity="one">%d transaction selected.</item>
        <item quantity="other">%d transactions selected.</item>
    </plurals>
    <plurals name="transactions_removed">
        <item quantity="one">Transaction deleted.</item>
        <item quantity="other">%d transactions deleted.</item>
    </plurals>
    <string name="title_activity_login">Sign In</string>

    <string name="login_title">Welcome to Ledger!</string>

    <string name="prefs_ledger_host">Ledger host</string>
    <string name="prefs_ledger_host_summary">Host name of the ledger server. Sample: https://my-ledger.com.</string>
    <string name="prefs_use_manual_sync">Synchronize manually</string>
    <string name="prefs_use_manual_sync_summary">If set to true then local and remote data will be synchronized only on synchronize action. In other case transaction changes will be published automatically.</string>
    <string name="prefs_manually_fetch_bank_links">Fetch bank links manually</string>
    <string name="prefs_manually_fetch_bank_links_summary">If set to true then bank links will only be fetched manually using fetch action. In other case bank links will be fetched when synchronizing.</string>
    <string name="action_report">Report</string>
    <string name="action_bank_links">Bank Links</string>
    <string name="action_add_bank_link">Add link</string>
    <string name="action_fetch_transactions">Fetch Transactions</string>
    <string name="activity_edit_bank_link">Edit bank link</string>
    <string name="select_bank_links">Select Bank Links</string>
    <plurals name="number_of_selected_bank_links">
        <item quantity="one">%d bank link selected.</item>
        <item quantity="other">%d bank links selected.</item>
    </plurals>
    <plurals name="bank_links_removed">
        <item quantity="one">Bank Link deleted.</item>
        <item quantity="other">%d Bank Links deleted.</item>
    </plurals>


</resources>
