<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="ledger_host"
        android:title="@string/prefs_ledger_host"
        android:summary="@string/prefs_ledger_host_summary"
        >
    </EditTextPreference>
    <SwitchPreference
        android:key="use_manual_sync"
        android:title="@string/prefs_use_manual_sync"
        android:summary="@string/prefs_use_manual_sync_summary"
        android:defaultValue="false"
        >
    </SwitchPreference>
    <Preference android:title="@string/action_bank_links">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.infora.ledger"
            android:targetClass="com.infora.ledger.BankLinksActivity" />
    </Preference>
</PreferenceScreen>